<resources>
    <string name="app_name">MyOrionWithFragmentsSignUP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="enter_name">Enter Name</string>
    <string name="entr_mailid">Enter Mail id</string>

    <string name="entr_pswd">Enter Password</string>
    <string name="enter_cnfrmpswd">Confrom Password</string>
    <string name="entr_location">Enter Location</string>
    <string name="enter_postalcode">Enter Postal Code</string>
    <string name="enter_btnname">Continue</string>
    <string name="enter_btnname_prevs">Back</string>

    <string name="enter_gender_male">Male</string>
    <string name="enter_gender_other">Other</string>
    <string name="enter_gender_female">Female</string>
    <string name="enter_gender">Gender</string>
    <string name="enter_dob">date of birth</string>

    <string name="masg">Enable all the permissions</string>


    <string name="verify_phone">Verify</string>
    <string name="verify_otp">OTP</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="ent_altenate_phone">Enter Alternate Phone No.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
