<!--
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="orion.myorionwithfragmentssignup.fragments.FragmentToGetPersonalDetails">

    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>
-->


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:context="orion.myorionwithfragmentssignup.fragments.FragmentToGetPersonalDetails">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/ent_mailid"
            android:layout_width="356dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/entr_mailid"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ent_mobile"
            android:layout_width="356dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/enter_phone"
            android:inputType="phone" />

       <!-- <EditText
            android:id="@+id/ent_pswd"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/entr_pswd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ent_cnfmpswd"
            android:layout_width="346dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/enter_cnfrmpswd"
            android:inputType="textPassword" />-->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/radio_group"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/enter_gender_female"

                android:id="@+id/gend_female"
                android:theme="@style/MyRadioButton"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/enter_gender_male"
                android:id="@+id/gend_male"
                android:theme="@style/MyRadioButton"/>


            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/enter_gender_other"
                android:id="@+id/gend_other"
                android:theme="@style/MyRadioButton"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/dob"
                android:layout_marginRight="5dp"
                android:editable="false"
                android:hint="@string/enter_dob"
                android:inputType="date"
                android:text=""/>

            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:layout_height="wrap_content"
                android:id="@+id/datepick_imagebtn"
                android:src="@drawable/ic_date_range"/>

            <!-- <DatePicker
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:id="@+id/pickdate">

             </DatePicker>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">


            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickOnBackPay"
                android:layout_gravity="left"

                android:text="@string/enter_btnname_prevs" />

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="90dp"
                android:onClick="clickOnContinuePay"
                android:text="@string/enter_btnname" />

        </LinearLayout>






    </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
